--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ img{
   text-decoration: none;
 }
 
-/* すべてのページに適用 - ヘッダー - */
+/* すべてのページに適用 - フッター - */
 .footer{
   background-image: url(../images/footer-bg.png);
   background-repeat: no-repeat;
